Replaced with example photos. Description changes along with slideshow, need to fix text alignment.

--- a/site/css/stylesWork.css
+++ b/site/css/stylesWork.css
@@ -17,6 +17,7 @@ header {
 .nav-menu {
   text-align: center;
 }
+
 .nav-menu ul {
   list-style: none;
   display: flex;
@@ -72,13 +73,13 @@ header {
   justify-content: space-between;
 }
 
-.pictures > img {
+.pictures>img {
   width: 48%;
   margin-bottom: 20px;
   transition: 0.5s ease;
 }
 
-.pictures >img:hover {
+.pictures>img:hover {
   transform: scale(1.1);
 }
 
@@ -102,6 +103,108 @@ header {
   margin-left: -10px;
 }
 
+.slideshow-description-container {
+  display: flex;
+  float: left;
+  margin-top: 5%;
+  margin-left: 10%;
+}
+
+.slideshow-container {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mySlides {
+  display: flex;
+  width: 500px;
+  flex-wrap: wrap;
+}
+
+.test {
+  display: flex;
+}
+
+.descriptionWork {
+  font-family: 'Raleway';
+  margin-left: 75px;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  height: auto;
+  padding: 16px;
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 3px;
+  user-select: none;
+}
+
+.next {
+  transform: rotate(90deg);
+  top: 50%;
+}
+
+.prev {
+  transform: rotate(90deg);
+  bottom: 50%;
+}
+
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+.numbertext {
+  color: black;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
+}
 
 footer {
   background-color: darkcyan;
@@ -112,83 +215,4 @@ footer {
   bottom: 0;
   height: 5%;
   width: 100%;
-}
-
-* {box-sizing:border-box}
-
-.slideshow-container {
-max-width: 1000px;
-position: relative;
-margin: auto;
-}
-
-.mySlides {
-display: none;
-}
-
-.prev, .next {
-cursor: pointer;
-position: absolute;
-top: 50%;
-width: auto;
-margin-top: -22px;
-padding: 16px;
-color: white;
-font-weight: bold;
-font-size: 18px;
-transition: 0.6s ease;
-border-radius: 0 3px 3px 0;
-user-select: none;
-}
-
-.next {
-right: 0;
-border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-background-color: rgba(0,0,0,0.8);
-}
-
-.text {
-color: #f2f2f2;
-font-size: 15px;
-padding: 8px 12px;
-position: absolute;
-bottom: 8px;
-width: 100%;
-text-align: center;
-}
-
-.numbertext {
-color: #f2f2f2;
-font-size: 12px;
-padding: 8px 12px;
-position: absolute;
-top: 0;
-}
-
-.dot {
-cursor: pointer;
-height: 15px;
-width: 15px;
-margin: 0 2px;
-background-color: #bbb;
-border-radius: 50%;
-display: inline-block;
-transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-background-color: #717171;
-}
-
-.fade {
-animation-name: fade;
-animation-duration: 1.5s;
-}
-
-@keyframes fade {
-from {opacity: .4}
-to {opacity: 1}
 }
